--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,6 +18,7 @@
   button {
     padding: 8px 12px;
     background-color: #007bff;
+    border-radius: 10px;
     color: #fff;
     border: none;
     cursor: pointer;
